force-app/main/default/objects/Move__c/Move__c.object-meta.xml
<CustomObject>
    <label>Move</label>
    <nameField>
        <displayFormat>MV-{0000}</displayFormat>
        <label>Move Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Moves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>