force-app/main/default/objects/Move__c/fields/Max_PP__c.field-meta.xml
<CustomField>
    <fullName>Max_PP__c</fullName>
    <label>Max PP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>