force-app/main/default/objects/Move__c/fields/Move__c.field-meta.xml
<CustomField>
    <fullName>Move__c</fullName>
    <formula>TM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move</label>
    <type>Text</type>
</CustomField>