force-app/main/default/objects/Move__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <label>Pokemon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Moves</relationshipLabel>
    <relationshipName>Moves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>