force-app/main/default/objects/Move__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <label>TM</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Moves</relationshipLabel>
    <relationshipName>Moves</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>